added reference doc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,21 @@
 #      auto-offset-reset: earliest
 #      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 #      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+
+
+#spring.kafka.bootstrap-servers	Comma separated list of kafka servers (host:port) running as a cluster. Applies to both producer and consumer unless overridden.
+#spring.kafka.producer.bootstrap-servers	Kafka bootstrap server for producer. Overrides spring.kafka.bootstrap-servers
+#spring.kafka.consumer.bootstrap-servers	Kafka bootstrap server for consumer. Overrides spring.kafka.bootstrap-servers
+#spring.kafka.client-id	Client-ID to pass to the server when making requests. Used for server-side logging.
+#spring.kafka.producer.client-id	Client-ID to pass for producer. Overrides spring.kafka.client-id
+#spring.kafka.consumer.client-id	Client-ID to pass for consumer. Overrides spring.kafka.client-id
+#spring.kafka.ssl.*	Kafka SSL configuration is to provide secure communication between producer/consumer and Kafka server. You need to generate key-store and trust-store files and configure the location and password
+#spring.kafka.properties .ssl.endpoint.identification.algorithm	If you have enabled SSL for kafka Server, then host name verification can be disabled by setting this property to empty string, otherwise spring boot startup throw error
+#spring.kafka.producer.*	Kafka Producer related configurations
+#spring.kafka.consumer.*	Kafka Consumer related configurations
+#We have also created application specific property to configure Kafka producer and consumer topics:-
+#
+#Property	Description
+#app.kafka.producer.topic	Kafka topic name to publish messages
+#app.kafka.consumer.topic	Comma separated list of Kafka topic names if you want consumer service to consume from multiple kafka topics
