added reference doc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
+
+# by default KafkaTemplate use DefaultKafkaProducerFactory which is auto initialized by spring boot based on kafka producer
+#  configuration provided in application.yml or application.properties file.
+
+#If you wish to customized the default configuration then you need to provide a bean definition of KafkaTemplate.
+
+
 #https://codingnconcepts.com/spring-boot/configure-kafka-producer-and-consumer/
 #app:
 #  kafka:
