--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,38 @@
 #If you wish to customized the default configuration then you need to provide a bean definition of KafkaTemplate.
 
 
+#For example, below we have provided encrypted passwords for trust-store, key-store, and key in our configuration application.yml file for security purpose and we want to set decrypted password to the ProducerFactory for ssl connections.
+#
+#We have passed this customized ProducerFactory to KafkaTemplate bean initialization. That’s it!
+
+#@Configuration
+#public class KafkaProducerConfig {
+#
+#    @Autowired
+#    private ProducerFactory<Integer, String> producerFactory;
+#
+#    @Autowired
+#    private CryptoService cryptoService;
+#
+#    public Map<String, Object> producerConfig() {
+#        Map<String, Object> producerConfig = new HashMap<>(producerFactory.getConfigurationProperties());
+#        decryptAndAddToConsumerConfig(producerConfig, SslConfigs.SSL_TRUSTSTORE_PASSWORD_CONFIG);
+#        decryptAndAddToConsumerConfig(producerConfig, SslConfigs.SSL_KEYSTORE_PASSWORD_CONFIG);
+#        decryptAndAddToConsumerConfig(producerConfig, SslConfigs.SSL_KEY_PASSWORD_CONFIG);
+#        return producerConfig;
+#    }
+#
+#    @Bean
+#    public KafkaTemplate<String, String> kafkaTemplate() {
+#        return new KafkaTemplate<>(new DefaultKafkaProducerFactory<>(producerConfig()));
+#    }
+#
+#    private void decryptAndAddToConsumerConfig(Map<String, Object> config, String property) {
+#        config.compute(property, (k, v) -> cryptoService.decrypt((String) v));
+#    }
+#}
+
+
 #https://codingnconcepts.com/spring-boot/configure-kafka-producer-and-consumer/
 #app:
 #  kafka:
